--- a/src/index.html
+++ b/src/index.html
@@ -14,33 +14,20 @@
   </head>
 
   <body>
-    <div class="container">
-      <h1>Welcome to Tauri!</h1>
-
-      <div class="row">
-        <a href="https://tauri.app" target="_blank">
-          <img src="/assets/tauri.svg" class="logo tauri" alt="Tauri logo" />
-        </a>
-        <a
-          href="https://developer.mozilla.org/en-US/docs/Web/JavaScript"
-          target="_blank"
-        >
-          <img
-            src="/assets/javascript.svg"
-            class="logo vanilla"
-            alt="JavaScript logo"
-          />
-        </a>
-      </div>
-
-      <p>Click on the Tauri logo to learn more about the framework</p>
-
-      <form class="row" id="greet-form">
-        <input id="greet-input" placeholder="Enter a name..." />
-        <button type="submit">Greet</button>
-      </form>
-
-      <p id="greet-msg"></p>
-    </div>
+    <section class="section inverted" id="download">
+	  <div class="bg"></div>
+	  <div class="content gridrow">
+		<div class="col_12 center">
+		  <h2>Install EmuDeck</h2>
+		  <p>Emulation easy for everyone</p>
+				  <a href="EmuDeck.desktop" id="download_link"><button type="button">
+					<nobr>Start Installation
+					  <svg class="rightarrow" width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
+						<path fill="currentColor" d="M16.4091 8.48003L21.5024 13.5734L1.98242 13.5734L1.98242 18.0178H21.5024L16.4091 23.1111L19.5558 26.2578L30.018 15.7956L19.5558 5.33337L16.4091 8.48003Z"></path>
+					  </svg>
+					</nobr></button></a>
+		</div>
+	  </div>
+	</section>
   </body>
 </html>
